# promocode-manager

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
apps/orders/: admin.py  app_module.py  apps.py  exceptions.py  models.py  schema_patch.py  schemas.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/orders/tests/: conftest.py  test_order_service.py  test_order_viewset.py  test_promocode_service.py
apps/users/: admin.py  exceptions.py  models.py
apps/users/migrations/: 0001_initial.py  0002_user_username.py
config/: settings.py  urls.py
